Cambio de libreria
Se cambio la libreria para codificar las imagenes a base64.